chat right aligned (fixed bugs), fullscreen canvas

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,14 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
+a>span {
+    text-decoration: none;
+}
+
+a, a>span :hover {
+    text-decoration: none;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -21,8 +29,12 @@ html, body {
     padding: 0;
 }
 
-.canvas {
-    border: 2px solid #000;
+canvas {
+    position: absolute;
+}
+
+.options {
+    position: absolute;
 }
 
 .form {
@@ -58,31 +70,34 @@ html, body {
     height:100%;
 }
 
-    #message-section{
-        display: table;
+    #message-section {
+        float: right;
+        display: flex;
+        flex-flow: column;
         height: 100%;
-        padding-left: 240px;
-        width: 40%;
+        width: 20%;
     }
-
+        
         .message-list {
-            display:table-row;
+            flex: 1 1 auto;
+            direction:rtl; 
+            overflow-y: scroll;
+            overflow-x: hidden;
+            display:flex;
+            flex-flow: column;
         }
-            .messages {
-                display: table-cell;
-                vertical-align: bottom;
-            }
 
-            .messageDiv {
-                overflow: auto;
-                max-height: 100%;
-                vertical-align: bottom;
-            }
-
+                .messageListHeader {
+                    margin-top: auto;
+                    width: 100%;
+                }
                 .message {
+                    flex: 0 0 auto;
                     width:100%;
                     padding-top:2px;
                     padding-bottom: 4px;
+                    white-space: nowrap;
+                    direction: ltr; 
                 }
 
                 .message:hover {
@@ -95,26 +110,32 @@ html, body {
                         display: inline-block;
                     }
 
-                    .rightMessage {
+                    .innerMessage {
+                        white-space:normal;
                         display: inline-block;
+                        word-wrap: break-word;
+                        width:200px;
+                        padding-right: 10px;
                     }
 
-                        .message-author-name {
+                        .messageText {
+
+                        }
+
+                        .authorName {
                             font-weight: 800;
                             padding-bottom: 7px;
                         }
 
-                        .message-time {
+                        .messageTime {
                             font-size: 80%;
                             color:#767676;
                         }
 
         #msg-send {
-            display:table-row;
-            height:150px;
+            flex: 0 1 60px;
             width: 100%;
-            height: 10%;
-            width: 40%;
+            height: 60px;
         }
 
             .message-composer {
@@ -127,19 +148,21 @@ html, body {
                 margin:auto;
                 border-radius: 4px;
                 resize:none;
+                padding-right: 10px;
                 padding-top: 8px;
                 padding-bottom: 7px;
                 padding-left: 10px;
-                margin-left: 30px;
+                margin-right: auto;
+                margin-left: 15px;
                 margin-top: 15px;
                 margin-bottom: auto;
             }
 
     #sidebar {
-        position:absolute;
-        top:0; bottom:0; left:0;
+        float:left;
+        height: 100%;
         width:240px;
-        color:#e9e9e9;
+        color:#DEDEDE;
         background:#2f2c2f;
         font-weight: 400;
     }
@@ -157,18 +180,28 @@ html, body {
             background:#252525;
         }
 
+        #sidebar .sidebarElementArea {
+            padding-right: 10px;
+        }
+
         #sidebar .sidebarElement {
             margin-top: 20px;
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+            padding-bottom: 3px;
             width:100%;
+            opacity: .7;
+
         }
 
             #sidebar .sidebarElement:hover {
-                background:#252525;
+                background:#5C6380;
+                
             }
 
         #sidebar .sidebarElement >span {
             padding-left: 15px;
-            opacity: .3;
+            color:#DEDEDE;
         }
 
 /* Pretty Scrollbar */
